--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -13,30 +13,30 @@ section {
   
   /* Make Resume Link Bigger */
   a {
-    font-size: 1.5rem; /* Increase text size */
-    color: #726E75; /* Deep gray-purple */
+    font-size: 1.5rem; 
+    color: #726E75; 
     font-weight: bold;
-    text-decoration: none; /* Remove default underline */
+    text-decoration: none; 
     transition: text-decoration 0.3s ease, color 0.3s ease;
   }
   
   /* Underline on hover */
   a:hover {
     text-decoration: underline;
-    color: #B6A39E; /* Soft mauve */
+    color: #B6A39E; 
   }
   
   /* Skills Section */
   h3 {
     color: white;
-    font-size: 1.8rem; /* Make skills heading larger */
+    font-size: 1.8rem;
     margin-top: 20px;
   }
   
   /* Skills List */
   
   li {
-    font-size: 25px; /* Increase skill text size */
+    font-size: 25px; 
     color: white;
     margin: 5px 0;
   }
